modified:   EJS/views/home.ejs

--- a/EJS/views/home.ejs
+++ b/EJS/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('components/header.ejs') %>
+<!-- <%- include('components/header.ejs') %>
 
 <h1>Welcome To Home Page</h1>
 
@@ -7,4 +7,6 @@
     <%  products.forEach(product => { %>
         <li><%= product.title %> </li>
     <% }); %>
-</ul>
+</ul> -->
+
+
